// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonIcon is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall testClass1 testClass2 css-1gfimnf-empty-primary-EuiButtonIcon"
  data-test-subj="test subject string"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color accent is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-bo46ml-empty-accent-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color danger is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-ryubyf-empty-danger-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color ghost is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-19g5rpb-empty-text-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color primary is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-1gfimnf-empty-primary-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color success is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-imoj3u-empty-success-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color text is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-19g5rpb-empty-text-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color warning is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-114fgmx-empty-warning-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props display base is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--xSmall css-t9fpur-base-primary-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props display empty is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-1gfimnf-empty-primary-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props display fill is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--fill euiButtonIcon--xSmall css-10vgkp4-fill-primary-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props href secures the rel attribute when the target is _blank 1`] = `
<a
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-1gfimnf-empty-primary-EuiButtonIcon"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</a>
`;

exports[`EuiButtonIcon props iconType is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-1gfimnf-empty-primary-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isDisabled is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-1w4v2zr-empty-disabled-EuiButtonIcon"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isDisabled or disabled is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-1w4v2zr-empty-disabled-EuiButtonIcon"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isDisabled renders a button even when href is defined 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-1w4v2zr-empty-disabled-EuiButtonIcon"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isLoading is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-1w4v2zr-empty-disabled-EuiButtonIcon"
  disabled=""
  type="button"
>
  <span
    aria-label="Loading"
    class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
    role="progressbar"
  />
</button>
`;

exports[`EuiButtonIcon props isSelected is rendered as false 1`] = `
<button
  aria-label="button"
  aria-pressed="false"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-1gfimnf-empty-primary-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isSelected is rendered as true 1`] = `
<button
  aria-label="button"
  aria-pressed="true"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-1gfimnf-empty-primary-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props size m is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--medium css-1gfimnf-empty-primary-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props size s is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--small css-1gfimnf-empty-primary-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props size xs is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--empty euiButtonIcon--xSmall css-1gfimnf-empty-primary-EuiButtonIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;
